06-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventrack-ingress
  namespace: inventrack-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app.kubernetes.io/name: inventrack
    app.kubernetes.io/part-of: inventrack
    environment: production
spec:
  ingressClassName: nginx
  rules:
    - host: conjunta3p.espe.edu.ec
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
